Minor bug fixing for Search UI and Bookmark Functionality with UI

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -20,7 +20,7 @@
             android:padding="8dp"
             android:src="@drawable/icon_bookmark"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgBackdrop" />
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
 
         <ImageView
@@ -33,59 +33,45 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <ImageView
-            android:id="@+id/imgPoster"
-            android:layout_width="120dp"
-            android:layout_height="180dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="-90dp"
-            android:contentDescription="@string/movie_poster"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toBottomOf="@id/imgBackdrop"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <!-- Movie Title -->
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/text_color"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@id/imgPoster"
-            app:layout_constraintStart_toEndOf="@id/imgPoster"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/imgBackdrop"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tvReleaseDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:textSize="14sp"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
-            app:layout_constraintStart_toEndOf="@id/imgPoster"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/language"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:textColor="@color/text_color"
             android:layout_marginTop="4dp"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
-            app:layout_constraintStart_toEndOf="@id/imgPoster"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/rating"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/imgPoster"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_large"
+            app:layout_constraintTop_toBottomOf="@id/language"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -94,7 +80,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textSize="16sp"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toBottomOf="@id/rating"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -104,7 +91,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:textSize="14sp"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toBottomOf="@id/tvOverview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -114,11 +102,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textSize="14sp"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintTop_toBottomOf="@id/popularity"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
